# LogosPlot_FW-

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/: 00_Manifest.md  01_Architecture.md  02_Engineering_Principles.md  08_MotionEngine.md  Coding_Standards.md
docs/adr/: ADR-0005-Motor-Abstraction.md
examples/: CMakeLists.txt
sdk/core/: Axis.h  Constants.h  Direction.h  Motor.h  MotorCommand.h  MotorCommandBuffer.h  Position.h  Result.h  Status.h  Types.h  Version.h
sdk/hal/: DesktopMockHal.cpp  DesktopMockHal.h  IHal.h
sdk/kinematics/: CoreXYKinematics.cpp  CoreXYKinematics.h  IKinematics.h
sdk/motion/: IMotionEngine.h  MotionEngine.cpp  MotionEngine.h
sdk/planner/: IPlanner.h
tests/: CoreXYKinematics_Test.cpp  MotionEngine_Test.cpp
